1998-06-29  Andrew Veliath  <andrewtv@usa.net>

	* configure.in improved
	
	* Wee, should now also works with standard lex with new renaming
	  rule
	
	* Now works with standard yacc, but flex will be a requirement

1998-06-24  Andrew Veliath  <andrewtv@usa.net>

	* Warn if identifier appears in different case
	
	* Most namespace collision detection added, except for inheritence

	* Use YYDEBUG
	
	* parser.y: Initial implementation of IDL_ns* stuff

1998-06-23  Andrew Veliath  <andrewtv@usa.net>

	* Implement constant evaluation

	* Almost all tree generation stuff added

	* Implement const_dcl and const_exp

	* Implement type_dcl, interface and module non-terminals
	
1998-06-22  Andrew Veliath  <andrewtv@usa.net>

	* Start implementing tree generation code

	* Add IDL_root_free, IDL_symtab_free

	* Modify IDL_parse_filename to include callbacks,
	  return a symbol table

	* Implmenent warning/error callback functionality

	* Move idl.c code to parser.y, delete idl.c

1998-06-17  Andrew Veliath  <andrewtv@usa.net>

	* Implement IDL_parse_filename
	
	* Implement supporting code for error and warning detection
	
	* Create rename.h to rename yacc/lex stuff

	* Add strdup definition to util.[ch] and autoconf
	
	* Create util.c, util.h
	
	* Create lexer.l, parser.l, idl.h, idl.c

	* Create library structure, automake and autoconf files