@@ -79,8 +79,6 @@ int main(int argc, char *argv[])
 		perror(fn);
 		exit(1);
 	}
-
-	printf("libIDL version: %s\n", IDL_get_version_string());
 	
 	return 0;
 }
